Coded by added at the bottom

--- a/src/style.css
+++ b/src/style.css
@@ -46,3 +46,8 @@ button {
   border-radius: 10px;
   background-color: #dfe7ff;
 }
+
+.coded-by {
+  text-align: center;
+  font-family: "Nunito", sans-serif;
+}
